force-app/main/default/objects/Task__c/Task__c.object-meta.xml
<CustomObject>
    <label>Task</label>
    <nameField>
        <displayFormat>Task-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>