force-app/main/default/objects/Task__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>